--- a/index.html
+++ b/index.html
@@ -11,72 +11,70 @@
 </head>
 <body>
     <div id="root">
+        <header class="hero">
+            <h1>Lorem Ipsum</h1>
+        </header>
         <div class="container">
-            <header class="hero">
-                <h1>Lorem Ipsum</h1>
-            </header>
-            <main class="main">
-                <div class="recent">
-                    <article class="main__article">
-                        <h2 class="main__article--title">Lorem</h2>
-                        <h3 class="main__article--date">00/00/0000</h3>
-                        <p class="main__article--text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
-                        </p>
-                    </article>
-                </div>
-                <div class="additional">
-                    <nav>
-                        <ul class="last-ones-list">
-                            <li class="last-ones-list__item">
-                                <a href="#">Lorem</a>
-                            </li>
-                            <li class="last-ones-list__item">
-                                <a href="#">Lorem</a>
-                            </li>
-                            <li class="last-ones-list__item">
-                                <a href="#">Lorem</a>
-                            </li>
-                            <li class="last-ones-list__item">
-                                <a href="#">Lorem</a>
-                            </li>
-                            <li class="last-ones-list__item">
-                                <a href="#">Lorem</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <nav>
-                        <ul class="social-list">
-                            <li class="social-list__item">
-                                <a href="#">Facebook</a>
-                            </li>
-                            <li class="social-list__item">
-                                <a href="#">Instagram</a>
-                            </li>
-                            <li class="social-list__item">
-                                <a href="#">Twitter</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+            <main class="recent">
+                <article class="main__article">
+                    <h2 class="main__article--title">Lorem</h2>
+                    <h3 class="main__article--date">00/00/0000</h3>
+                    <p class="main__article--text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
+                    </p>
+                </article>
             </main>
-            <footer>
-                <h3>Lorem Ipsum © 2021</h3>
+            <section class="additional">
                 <nav>
-                    <ul>
-                        <li>
+                    <ul class="last-ones-list">
+                        <li class="last-ones-list__item">
                             <a href="#">Lorem</a>
                         </li>
-                        <li>
+                        <li class="last-ones-list__item">
                             <a href="#">Lorem</a>
                         </li>
-                        <li>
+                        <li class="last-ones-list__item">
+                            <a href="#">Lorem</a>
+                        </li>
+                        <li class="last-ones-list__item">
+                            <a href="#">Lorem</a>
+                        </li>
+                        <li class="last-ones-list__item">
                             <a href="#">Lorem</a>
                         </li>
                     </ul>
                 </nav>
-            </footer>
+                <nav>
+                    <ul class="social-list">
+                        <li class="social-list__item">
+                            <a href="#">Facebook</a>
+                        </li>
+                        <li class="social-list__item">
+                            <a href="#">Instagram</a>
+                        </li>
+                        <li class="social-list__item">
+                            <a href="#">Twitter</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
         </div>
+        <footer class="footer">
+            <h3>Lorem Ipsum © 2021</h3>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Lorem</a>
+                    </li>
+                    <li>
+                        <a href="#">Lorem</a>
+                    </li>
+                    <li>
+                        <a href="#">Lorem</a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
     </div>
 </body>
 </html>
