--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </header>
         <div class="container">
             <main class="recent">
-                <article class="main__article">
-                    <h2 class="main__article--title">Lorem</h2>
-                    <h3 class="main__article--date">00/00/0000</h3>
-                    <p class="main__article--text">
+                <article class="article">
+                    <h2 class="article__title">Lorem</h2>
+                    <h4 class="article__date">00/00/0000</h4>
+                    <p class="article__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
                     </p>
                 </article>
