Styled additional, content fix

--- a/index.html
+++ b/index.html
@@ -18,14 +18,22 @@
             <main class="recent">
                 <article class="article">
                     <h2 class="article__title">Lorem</h2>
-                    <h4 class="article__date">00/00/0000</h4>
+                    <h4 class="article__date">22/04/2021</h4>
+                    <p class="article__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
+                    </p>
+                </article>
+                <article class="article">
+                    <h2 class="article__title">Ipsum</h2>
+                    <h4 class="article__date">21/04/2021</h4>
                     <p class="article__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
                     </p>
                 </article>
             </main>
             <section class="additional">
-                <nav>
+                <nav class="additional__first">
+                    <h3>Last articles</h3>
                     <ul class="last-ones-list">
                         <li class="last-ones-list__item">
                             <a href="#">Lorem</a>
@@ -44,16 +52,17 @@
                         </li>
                     </ul>
                 </nav>
-                <nav>
+                <nav class="additional__second">
+                    <h3>Follow my socials</h3>
                     <ul class="social-list">
                         <li class="social-list__item">
-                            <a href="#">Facebook</a>
+                            <a href="https://facebook.com" target="_blank">Facebook</a>
                         </li>
                         <li class="social-list__item">
-                            <a href="#">Instagram</a>
+                            <a href="https://instagram.com" target="_blank">Instagram</a>
                         </li>
                         <li class="social-list__item">
-                            <a href="#">Twitter</a>
+                            <a href="https://twitter.com" target="_blank">Twitter</a>
                         </li>
                     </ul>
                 </nav>
