--- a/index.html
+++ b/index.html
@@ -14,60 +14,58 @@
         <header class="hero">
             <h1>Lorem Ipsum</h1>
         </header>
-        <div class="container">
-            <main class="recent">
-                <article class="article">
-                    <h2 class="article__title">Lorem</h2>
-                    <h4 class="article__date">22/04/2021</h4>
-                    <p class="article__text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
-                    </p>
-                </article>
-                <article class="article">
-                    <h2 class="article__title">Ipsum</h2>
-                    <h4 class="article__date">21/04/2021</h4>
-                    <p class="article__text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
-                    </p>
-                </article>
-            </main>
-            <section class="additional">
-                <nav class="additional__first">
-                    <h3>Last articles</h3>
-                    <ul class="last-ones-list">
-                        <li class="last-ones-list__item">
-                            <a href="#">Lorem</a>
-                        </li>
-                        <li class="last-ones-list__item">
-                            <a href="#">Lorem</a>
-                        </li>
-                        <li class="last-ones-list__item">
-                            <a href="#">Lorem</a>
-                        </li>
-                        <li class="last-ones-list__item">
-                            <a href="#">Lorem</a>
-                        </li>
-                        <li class="last-ones-list__item">
-                            <a href="#">Lorem</a>
-                        </li>
-                    </ul>
-                </nav>
-                <nav class="additional__second">
-                    <h3>Follow my socials</h3>
-                    <ul class="social-list">
-                        <li class="social-list__item">
-                            <a href="https://facebook.com" target="_blank">Facebook</a>
-                        </li>
-                        <li class="social-list__item">
-                            <a href="https://instagram.com" target="_blank">Instagram</a>
-                        </li>
-                        <li class="social-list__item">
-                            <a href="https://twitter.com" target="_blank">Twitter</a>
-                        </li>
-                    </ul>
-                </nav>
-            </section>
-        </div>
+        <main class="recent container">
+            <article class="article">
+                <h2 class="article__title">Lorem</h2>
+                <h4 class="article__date">22/04/2021</h4>
+                <p class="article__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
+                </p>
+            </article>
+            <article class="article">
+                <h2 class="article__title">Ipsum</h2>
+                <h4 class="article__date">21/04/2021</h4>
+                <p class="article__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam rerum quisquam at harum dicta reprehenderit provident praesentium, fuga ex quae hic ducimus odio, officia officiis a suscipit commodi consequuntur sed.
+                </p>
+            </article>
+        </main>
+        <section class="additional container">
+            <nav class="additional__first">
+                <h3>Last articles</h3>
+                <ul class="last-ones-list">
+                    <li class="last-ones-list__item">
+                        <a href="#">Lorem</a>
+                    </li>
+                    <li class="last-ones-list__item">
+                        <a href="#">Lorem</a>
+                    </li>
+                    <li class="last-ones-list__item">
+                        <a href="#">Lorem</a>
+                    </li>
+                    <li class="last-ones-list__item">
+                        <a href="#">Lorem</a>
+                    </li>
+                    <li class="last-ones-list__item">
+                        <a href="#">Lorem</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="additional__second">
+                <h3>Follow my socials</h3>
+                <ul class="social-list">
+                    <li class="social-list__item">
+                        <a href="https://facebook.com" target="_blank">Facebook</a>
+                    </li>
+                    <li class="social-list__item">
+                        <a href="https://instagram.com" target="_blank">Instagram</a>
+                    </li>
+                    <li class="social-list__item">
+                        <a href="https://twitter.com" target="_blank">Twitter</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
         <footer class="footer">
             <h4>Lorem Ipsum © 2021</h4>
         </footer>
