Changed to Blog Ipsum

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     
     <link rel="stylesheet" href="./css/style.min.css">
 
-    <title>Lorem Ipsum</title>
+    <title>Blog Ipsum</title>
 </head>
 <body>
     <div id="root">
         <header class="hero">
-            <h1>Lorem Ipsum</h1>
+            <h1>Blog Ipsum</h1>
         </header>
         <main class="recent container">
             <article class="article">
